<resources>
    <string name="app_name">P5</string>


    <string name="StartActivity_study">Study</string>
    <string name="StartActivity_properties">Properties</string>
    <string name="StartActivity_settings">Settings</string>
    <string name="StartActivity_progress">Progress</string>
    <string name="StartActivity_help">Help</string>


    <string name="StudyActivity_translationQuestion">What is the translation?</string>

</resources>
