<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fabianfalck.p5.StartActivity">

    <Button
        android:id="@+id/material_button"
        android:text="@string/StartActivity_properties"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp" />

    <Button
        android:id="@+id/study_button"
        android:text="@string/StartActivity_study"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:layout_marginTop="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!-- Settings button is the centre of the three buttons -->
    <Button
        android:id="@+id/settings_button"
        android:text="@string/StartActivity_settings"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"/>

    <Button
        android:id="@+id/progress_button"
        android:text="@string/StartActivity_progress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@id/settings_button"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/help_button"
        android:text="@string/StartActivity_help"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@id/progress_button"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"/>



</RelativeLayout>
